styles/styles.css
/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  /*min-height: 100%;*/
}

.footer {
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 100px;
  background-color: #f5f5f5;
}

.social {
  padding-top: 20px;
}

.social > a {
  margin: 8px;
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

body > .container {
  padding: 60px 15px 0;
}
.container .text-muted {
  margin: 20px 0;
}

.footer > .container {
  padding-right: 15px;
  padding-left: 15px;
}

/* ------------------------------------------------------------------------- */

/*
* BACKGROUND COVER IMAGE
*/

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #0facf3;
  border: 1px solid #0facf3;
  width: 135px;
  margin: 20px auto;
}

/*
 * Base structure
 */

html,
body {
  height: 100%;
  background: #FFF;
}
body {
  color: #252422;
  text-align: center;
  /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
}

h2.cover-heading, .backgroundImg-text {
  color: #fff;
}

a {
  color: #0facf3;
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  display: table;
  width: 100%;
  height: 100%; /* For at least Firefox */
  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
  background-image: url("../images/photo-1444201716572-c60ec66d0494.jpg");
  background-size: 100% auto;
  background-repeat: no-repeat;
}
.site-wrapper-inner {
  display: table-cell;
  vertical-align: top;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/*
 * Cover
 */

.cover {
  padding: 0 20px;
}

.cover .btn-lg {
  padding: 10px 20px;
  font-weight: bold;
}

/*
* Canvas
*/

#btnStart {
  display: inline-block;
}

.gameBtn {
  margin: 20px 10px 0 10px;
  width: 75px;
}

/*
* Accordeon
*/

h4.panel-title {
  text-align: left;
}

.panel-body {
  color: #333;
}

.panel-group {
  margin-bottom: 0;
}

/*
* Media Queries
*/

@media (min-width: 320px) {
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 768px) {
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 992px) {
  .cover-container {
    width: 700px;
  }
}

